Add swagger annotation for user handler and fix minor misspell
